Introducing News Module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DevFest 19</string>
     <string name="title_music">music</string>
     <string name="title_weather">weather</string>
+    <string name="title_news">news</string>
 </resources>
