--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_music">music</string>
     <string name="title_weather">weather</string>
     <string name="title_news">news</string>
+    <string name="title_movies">movies</string>
 </resources>
